--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">compose-paging-rick-morty</string>
+    <string name="title_home">Home</string>
 </resources>
